11-exercise/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
