11-exercise/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: customer-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  number: 8080
